[package]
name = "saltpack-rs"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

[dependencies]
sodiumoxide = "0.2.0"
rand = "0.6.5"
byteorder = "1.3.1"
rmp-serde = "0.13.7"
serde = "1.0.88"
serde_derive = "1.0.88"
base64 = "0.10.1"
rmp = "0.8.7"
serde_bytes = "0.10.4"
serde_repr = "0.1.3"
